Fix industries section alignment

--- a/css/home-layout.css
+++ b/css/home-layout.css
@@ -1,6 +1,3 @@
-.services .card-title{
-
-}
 
 .title-card-1{
     background: linear-gradient(31deg, #009efa, #f66f3f);
